# gpu-ray-surface-intersection-in-cuda

./: .gitignore  CMakeLists.txt
pycuda/: demo.py  pycuda_ray_surface_intersect.py  pycuda_source.cu  pycuda_source.py
scripts/: demo.ipynb  experimental_feature.ipynb  gpu_ray_surface_intersect.py  input_synthesis.py
